# claude-vectorworks-mcp

./: .gitignore  LICENSE  NOTICE  README.md  SECURITY.md
mcp-server/: Cargo.toml
mcp-server/src/: bridge.rs  main.rs  server.rs
plugin/: BUILD.md
plugin/src/: ExtMcpBridge.cpp  ExtMcpBridge.h  ExtMcpBridge.vwstrings  SocketBridge.cpp  SocketBridge.h
