[package]
name = "vectorworks-mcp-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "vectorworks-mcp-server"
path = "src/main.rs"

[dependencies]
rmcp = { version = "1.8", features = ["server", "transport-io", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
